--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.0.2",
-    "styled-components": "^6.1.13"
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.18",
+    "swiper": "^11.2.7"
   },
   "devDependencies": {
     "eslint": "^8",
